--- a/index.html
+++ b/index.html
@@ -226,6 +226,44 @@
 
 
 
+        <!-- project Start -->
+        <div class="container-xxl py-5 project-section">
+            <div class="container">
+                <div class="bg-white rounded p-3">
+                    <div class="bg-white rounded p-4" style="border: 1px dashed rgba(198, 117, 30, 0.3)">
+                        <div class="row g-5 align-items-center">
+                            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+                                <div class="owl-carousel header-carousel">
+                                    <div class="owl-carousel-item">
+                                        <img class="img-fluid" src="img/slider-9.jpeg" alt="">
+                                    </div>
+                                    <div class="owl-carousel-item">
+                                        <img class="img-fluid" src="img/slider-10.jpeg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="mb-4">
+                                    <h1 class="mb-3 rtl">استكشف مشاريعنا المتميزة</h1>
+                                    <div class="rtl my-5 py-2">
+                                        <p><i class="fa fa-check text-primary ms-3"></i>نحن نقدم مجموعة متنوعة من المشاريع العقارية التي تلبي احتياجات جميع العملاء                                        </p>
+                                        <p><i class="fa fa-check text-primary ms-3"></i>نقدم لك تصميمات عصرية ومرافق متطورة في جميع مشاريعنا                                        </p>
+                                        <p><i class="fa fa-check text-primary ms-3"></i>نحن نركز على تطبيق مبادئ الاستدامة في جميع مشاريعنا لضمان مستقبل أفضل                                        </p>
+                                        <p><i class="fa fa-check text-primary ms-3"></i>كل مشروع من مشاريعنا مصمم بعناية لتلبية احتياجاتك ويعكس أسلوب حياتك                                        </p>
+                                        <p><i class="fa fa-check text-primary ms-3"></i>مشاريعنا التجارية توفر فرصًا استثمارية ممتازة في مواقع استراتيجية                                        </p>
+                                    </div>
+                        <a class="btn btn-primary py-3 px-5 mt-3" href="projects.html">اقرء المذيد</a>
+                                </div>
+                                
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- project End -->
+
         <!-- Call to Action Start -->
         <div class="container-xxl py-5">
             <div class="container">
