--- a/projects.html
+++ b/projects.html
@@ -99,10 +99,17 @@
 
 
         <!-- Testimonial Start -->
-        <div class="carousel">
-            <div class="carousel-images" id="carouselImages">
+         <div class="projects container py-5">
+            <h3 class="text-center display-6 my-2">أسواق المهرجان            </h3>
+
+             <div class="carousel">
+                 <div class="carousel-images" id="carouselImages">
                 <img src="img/slider-9.jpeg" alt="slider image">
                 <img src="img/slider-10.jpeg" alt="slider image">
+                <img src="img/slider-11.jpg" alt="slider image">
+                <img src="img/slider-12.jpg" alt="slider image">
+                <img src="img/slider-13.jpg" alt="slider image">
+                <img src="img/slider-14.jpg" alt="slider image">
                 <img src="img/slider-1.jpg" alt="slider image">
                 <img src="img/slider-2.jpg" alt="slider image">
                 <img src="img/slider-3.jpg" alt="slider image">
@@ -118,6 +125,29 @@
                 <button class="button" onclick="moveSlide(1)">❯</button>
             </div>
         </div>
+        <div class="projects-content rtl">
+            <p>على مساحة تناهز الستون ألف متر مربع على شارع البطحاء شمال حراج بن قاسم تعين موقع لإنشاء مركز تجاري بما فية أسواق المهرجان بحيث يكون طرازاً معمارياً و تحديثاً لتلك المنطقة التجارية الحيوية ذات الجذب الكبيرة, وأن يرقى لطموحات أمانة مدينة الرياض و هدفها.</p>
+            <p>وكما نفتخر نحن مؤسسة بن دايل بتنفيذه من واقع خبرتنا الطويلة في مثل هذا النوع من الأسواق, لذا حرصنا منذ البداية أن يتم تنفيذ هذا المشروع على أحدث المواصفات الفنية فائقة الجودة مع حداثة و روعة في التصميم المعماري, لذا فقد تم إختيار الخرسانة مسبقة الصنع بوجهها الأسمتنتي الأبيض مع الحصى الملون و المعمل بالرمل ليعطي صورة ثابتة إلى وجه السوق معبراً عن جمالية تدوم الأطول فترة ممكنة و باقل صيانة مطلوبة.</p>
+            <h6 class="mt-5"> موقع و مساحة المشروع         </h6>
+            <p>يقع المشروع في موقع إستراتيجي جنوب مدينة الرياض غرب شارع البطحاء و شمال أسواق حراج بن قاسم, و يتميز بسهولة الوصول إليه مباشرة عن طريق شارع البطحاء العام و طريق الدائري الجنوبي.
+                تبلغ مساحة المشروع 60992 متر مربع.</p>
+                <h6 class="mt-5"> نشاطات المشروع                </h6>
+                <ul>
+                    <li> السجاد و الموكيت</li>
+                    <li>المفروشات و الستائر</li>
+                    <li>الأجهزة الكهربائية.</li>
+                    <li>تجارة الأدوات المنزلية</li>
+                    <li> الملابس الجاهزة و الأقمشة</li>
+                    <li>العطورات و الزينة و البخور</li>
+                    <li>تجارة الشنط و الأحذية</li>
+                    <li>تجارة المواد الغذائية و المحامص</li>
+                    <li> تجارة الاشياء القديمة</li>
+                </ul>
+        </div>
+        <div class="project-map rounded-3 overflow-hidden">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3627.1291453735043!2d46.724778185384835!3d24.619233387092443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f05920a92504d%3A0xa13b9b082d1770c1!2z2KfYs9mI2KfZgiDYp9mE2YXZh9ix2KzYp9mG!5e0!3m2!1sar!2seg!4v1735222938314!5m2!1sar!2seg" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
         <!-- Testimonial End -->
         
 
