--- a/index.html
+++ b/index.html
@@ -244,13 +244,14 @@
                             </div>
                             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                                 <div class="mb-4">
-                                    <h1 class="mb-3 rtl">استكشف مشاريعنا المتميزة</h1>
+                                    <h1 class="mb-3 rtl">استكشف معنا مشروع المهرجان   </h1>
                                     <div class="rtl my-5 py-2">
-                                        <p><i class="fa fa-check text-primary ms-3"></i>نحن نقدم مجموعة متنوعة من المشاريع العقارية التي تلبي احتياجات جميع العملاء                                        </p>
-                                        <p><i class="fa fa-check text-primary ms-3"></i>نقدم لك تصميمات عصرية ومرافق متطورة في جميع مشاريعنا                                        </p>
-                                        <p><i class="fa fa-check text-primary ms-3"></i>نحن نركز على تطبيق مبادئ الاستدامة في جميع مشاريعنا لضمان مستقبل أفضل                                        </p>
-                                        <p><i class="fa fa-check text-primary ms-3"></i>كل مشروع من مشاريعنا مصمم بعناية لتلبية احتياجاتك ويعكس أسلوب حياتك                                        </p>
-                                        <p><i class="fa fa-check text-primary ms-3"></i>مشاريعنا التجارية توفر فرصًا استثمارية ممتازة في مواقع استراتيجية                                        </p>
+                                        <p><i class="fa fa-check text-primary ms-3"></i>الموقع والمميزات</p>
+                                        <p><i class="fa fa-check text-primary ms-3"></i>تفاصيل السوق </p>
+                                        <p><i class="fa fa-check text-primary ms-3"></i>أنشطة السوق </p>
+                                        <p><i class="fa fa-check text-primary ms-3"></i>الشركات المستهدفة</p>
+                                        <p><i class="fa fa-check text-primary ms-3"></i>المبانى</p>
+                                       
                                     </div>
                         <a class="btn btn-primary py-3 px-5 mt-3" href="projects.html">اقرء المذيد</a>
                                 </div>
