--- a/projects.html
+++ b/projects.html
@@ -144,9 +144,13 @@
                     <li> تجارة الاشياء القديمة</li>
                 </ul>
         </div>
-        <div class="project-map rounded-3 overflow-hidden">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3627.1291453735043!2d46.724778185384835!3d24.619233387092443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f05920a92504d%3A0xa13b9b082d1770c1!2z2KfYs9mI2KfZgiDYp9mE2YXZh9ix2KzYp9mG!5e0!3m2!1sar!2seg!4v1735222938314!5m2!1sar!2seg" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="text-end p-3">
+
+            <a class="btn btn-primary py-3 px-5 mt-3 rtl" target="_blank" href="pdf.html">اقرء المذيد</a>
         </div>
+
+        <div class="project-map rounded-3 overflow-hidden">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3627.55245078969!2d46.7293643!3d24.6046372!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f0fab7d05e4b9%3A0xe05a4c64412a0c84!2z2KPYs9mI2KfZgiDYp9mE2YXZh9ix2KzYp9mG!5e0!3m2!1sar!2seg!4v1735396960965!5m2!1sar!2seg" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div>
     </div>
         <!-- Testimonial End -->
         
