--- a/about.html
+++ b/about.html
@@ -186,6 +186,10 @@
 
         <!-- Back to Top -->
         <div class="side-items">
+            <a href="tel:966569612000" class="rounded-circle btn-lg-square d-lg-none  bg-gray  mb-3 text-white btn btn-lg">
+                <i class="fas fa-phone"></i>
+
+            </a>
             <a href="https://wa.me/966569612000" target="_blank" class="rounded-circle btn-lg-square  bg-success mb-3 text-white btn btn-lg">
                 <i class="fab fa-whatsapp"></i>
               </a>
