--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                             </div>
                             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                                 <div class="mb-4">
-                                    <h1 class="mb-3 rtl">استكشف معنا مشروع المهرجان   </h1>
+                                    <h1 class="mb-3 rtl">  مشروع المهرجان   </h1>
                                     <div class="rtl my-5 py-2">
                                         <p><i class="fa fa-check text-primary ms-3"></i>الموقع والمميزات</p>
                                         <p><i class="fa fa-check text-primary ms-3"></i>تفاصيل السوق </p>
@@ -326,6 +326,10 @@
 
         <!-- Back to Top -->
          <div class="side-items">
+            <a href="tel:966569612000" class="rounded-circle btn-lg-square d-lg-none  bg-gray  mb-3 text-white btn btn-lg">
+                <i class="fas fa-phone"></i>
+
+            </a>
             <a href="https://wa.me/966569612000" target="_blank" class="rounded-circle btn-lg-square  bg-success mb-3 text-white btn btn-lg">
                 <i class="fab fa-whatsapp"></i>
               </a>
